todos and revision